@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketZoom.pm - to get a closer view
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketZoom.pm,v 1.127 2010-10-01 14:27:19 mg Exp $
+# $Id: AgentTicketZoom.pm,v 1.128 2010-10-11 17:06:56 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -16,9 +16,11 @@ use warnings;
 
 use Kernel::System::CustomerUser;
 use Kernel::System::LinkObject;
+use Kernel::System::EmailParser;
+use Kernel::System::SystemAddress;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.127 $) [1];
+$VERSION = qw($Revision: 1.128 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -76,6 +78,7 @@ sub new {
     }
     $Self->{CustomerUserObject} = Kernel::System::CustomerUser->new(%Param);
     $Self->{LinkObject}         = Kernel::System::LinkObject->new(%Param);
+    $Self->{SystemAddress}      = Kernel::System::SystemAddress->new(%Param);
 
     return $Self;
 }
@@ -1258,35 +1261,61 @@ sub _ArticleItem {
                     },
                 );
 
-                $Param{StandardResponses}->{0}
-                    = '- ' . $Self->{LayoutObject}->{LanguageObject}->Get('Reply All') . ' -';
+                # check if reply all is needed
+                my $Recipients = '';
+                for my $Key (qw(From To Cc)) {
+                    next if !$Article{$Key};
+                    if ($Recipients) {
+                        $Recipients .= ', ';
+                    }
+                    $Recipients .= $Article{$Key};
+                }
+                my $RecipientCount = 0;
+                if ($Recipients) {
+                    my $EmailParser = Kernel::System::EmailParser->new(
+                        %{$Self},
+                        Mode => 'Standalone',
+                    );
+                    my @Addresses = $EmailParser->SplitAddressLine( Line => $Recipients );
+                    for my $Address (@Addresses) {
+                        my $IsLocal = $Self->{SystemAddress}->SystemAddressIsLocalAddress(
+                            Address => $EmailParser->GetEmailAddress( Email => $Address ),
+                        );
+                        next if $IsLocal;
+                        $RecipientCount++;
+                    }
+                }
+                if ( $RecipientCount > 1 ) {
+                    $Param{StandardResponses}->{0}
+                        = '- ' . $Self->{LayoutObject}->{LanguageObject}->Get('Reply All') . ' -';
 
-                $StandardResponsesStrg = $Self->{LayoutObject}->BuildSelection(
-                    Name => 'ResponseID',
-                    ID   => 'ResponseIDAll',
-                    Data => $Param{StandardResponses},
-                );
+                    $StandardResponsesStrg = $Self->{LayoutObject}->BuildSelection(
+                        Name => 'ResponseID',
+                        ID   => 'ResponseIDAll',
+                        Data => $Param{StandardResponses},
+                    );
 
-                $Self->{LayoutObject}->Block(
-                    Name => 'ArticleReplyAsDropdown',
-                    Data => {
-                        %Ticket, %Article, %AclAction,
-                        StandardResponsesStrg => $StandardResponsesStrg,
-                        Name                  => 'Reply All',
-                        Class                 => 'AsPopup',
-                        Action                => 'AgentTicketCompose',
-                        FormID                => 'ReplyAll',
-                        ReplyAll              => 1,
-                        ResponseElementID     => 'ResponseIDAll',
-                    },
-                );
-                $Self->{LayoutObject}->Block(
-                    Name => 'ArticleReplyAsDropdownJS' . $Param{Type},
-                    Data => {
-                        %Ticket, %Article, %AclAction,
-                        FormID => 'ReplyAll',
-                    },
-                );
+                    $Self->{LayoutObject}->Block(
+                        Name => 'ArticleReplyAsDropdown',
+                        Data => {
+                            %Ticket, %Article, %AclAction,
+                            StandardResponsesStrg => $StandardResponsesStrg,
+                            Name                  => 'Reply All',
+                            Class                 => 'AsPopup',
+                            Action                => 'AgentTicketCompose',
+                            FormID                => 'ReplyAll',
+                            ReplyAll              => 1,
+                            ResponseElementID     => 'ResponseIDAll',
+                        },
+                    );
+                    $Self->{LayoutObject}->Block(
+                        Name => 'ArticleReplyAsDropdownJS' . $Param{Type},
+                        Data => {
+                            %Ticket, %Article, %AclAction,
+                            FormID => 'ReplyAll',
+                        },
+                    );
+                }
             }
         }
 
