@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1456 2010-10-11 13:27:00 cg Exp $
+# $Id: CHANGES,v 1.1457 2010-10-11 17:06:56 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.0.0 beta6 2010-??-??
+ - 2010-10-11 Fixed bug#6040 - Remove ReplyAll option if possible.
  - 2010-10-07 Fixed bug#5994 - Creating new statistic, field validation kicks in immediately.
  - 2010-10-07 Fixed bug#5975 - Notifications (event-based) to external email
     address are visible to customers.
